# duck-orm-cli

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
duck_orm_cli/cli/: main.py  model_migration.py  model_seed.py
duck_orm_cli/cli/utils/: functions.py
